--- a/soft-tech-ltd-section-design/styles/responsive.css
+++ b/soft-tech-ltd-section-design/styles/responsive.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 576px) {
   .gallary {
-    flex-direction: column;
+    grid-template-columns: repeat(1, 1fr);
   }
   .img {
     display: flex;
@@ -12,8 +12,12 @@
   }
 }
 
-@media screen and (min-width: 577px) and (max-width: 992px) {
+@media only screen and (min-width: 577px) and (max-width: 992px) {
+  .gallary {
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+  }
   .item {
-    flex: 50%;
+    align-items: center;
   }
 }
